--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690464.md#1" target="_blank">中国学者入美企图搜集敏感信息 在海关被截</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/AirportCBPLobby2-150x120.jpeg" align ="left"></a>美国海关与边境保护局（CBP）27日表示，一位中国研究学者14日在底特律大都会机场（Detroit Metropolitan Airport）试图入境时，被CBP官员截住，在一番盘问后，CBP决定禁止该学者入境，因为其从事欺诈性商业行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11690947.md#1" target="_blank">王行：“倒戈”是中共覆灭前让人惊喜的一幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11690947.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/edited221-1-600x400-2-150x120.jpg" align ="left"></a>近几天，中共特工王立强投诚“倒戈”，已成对中共打击巨大的海内外轰炸性新闻，中共培养的一个得意精明间谍，没想到变成了“孙悟空”，他的出逃就好像从魔王的肚子里偷偷溜出，然后把它的肠子、肚子、脏心、烂肺全掏出来曝光一样，一下子让世界看清楚了中共在背地里所干的邪恶勾当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11691030.md#1" target="_blank">洪微：邓小平埋下“一国两制”定时炸弹</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11691030.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190617233359100484-600x400-150x120.jpg" align ="left"></a>中共还会假意承诺香港的“一国两制”，但应该没人真的再相信了。今天香港的局势，一度被称为“黑天鹅”事件，意指不可预见的突发事件，或者，是指极不可能发生，实际上却又发生的事件，果真如此吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11691065.md#1" target="_blank">赴港看港人抗争  大陆民众：了不起</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/30/n11691065.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-17_12-44-29-600x399-1-600x399-1-150x120.jpg" align ="left"></a>反修例抗争已经5个多月，香港民众守护自由的决心，感动世人。有大陆民众不愿相信中共一言堂的报道，他特地去香港看看港人的抗争。“香港的学子很不简单，香港人民也了不起。”他说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:51 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690451.md#1" target="_blank">脸书中国员工比例高 引发中共渗透的忧虑</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690451.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1181684388-150x120.jpg" align ="left"></a>脸书（Facebook）创办人扎克伯格（Zuckerberg）近日批评中共的网路言论审查制度，还表示有意放弃打入中国市场，但是脸书目前雇用许多中国员工，他们是脸书最大的群体，一些人还支持北京立场，引起担忧，这些人来美国为中共说话？替中共做事？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 11:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690472.md#1" target="_blank">香港法案生效鼓舞港人 何韵诗：下一站英国</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690472.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280828532478-150x120.jpg" align ="left"></a>美国总统川普（特朗普）在感恩节前夕正式签署《香港人权与民主法案》，令五个多月来持续反抗极权的港人士气大振。一向站在运动前线的歌手何韵诗28日在facebook（fb）写下：“终于通过！！下一步，英国！”表明港人下一步的目标是争取英国国会通过类似的法案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 7:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690647.md#1" target="_blank">受贿淫乱 江苏医院“网红院长”被处分</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690647.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/yi-lihua_2-150x120.jpg" align ="left"></a>被称为“网红院长”的中共江苏省无锡市第二人民医院前院长、党委副书记易利华日前被“双开”并移送司法。易利华被指违规经商，为他人谋利，收受贿赂，淫乱等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 6:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690630.md#1" target="_blank">打麻将牵出200亿家产 省高院女副院长被免</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690630.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/zhang-jiahui_8-600x400-150x120.jpg" align ="left"></a>因一起敲诈案导致其200亿家产暴露的海南省高院副院长张家慧，落马5个月后被免职。这起敲诈案则是同张家慧打麻将有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690632.md#1" target="_blank">消息：美拟扩大管制 进一步限制华为供应商</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690632.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/20190528-HUAMING-HONGKONG-01-1-150x120.jpg" align ="left"></a>路透社引述两名知情人士称，美国政府可能扩大其出口管制权力，以阻止更多的使用美国技术的外国产品被供应给华为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690477.md#1" target="_blank">专家谈川普签人权法 对香港与中共的影响</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690477.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/154478b565582010_ttl7dayzxZ_trump-04-150x120.jpg" align ="left"></a>美国总统川普11月27日签署香港人权法案后，澳洲悉尼科技大学教授、中国问题专家冯崇义向大纪元分析签署该法后对香港、中共以及中美贸易战等的影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690483.md#1" target="_blank">掌掴男子 央视女记者孔琳琳在英国获罪</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690483.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/12/1610171049542525-150x120.jpg" align ="left"></a>中共央视驻伦敦记者孔琳琳被指控袭击罪，周五（11月29日），一名英国法官判处她普通袭击罪名成立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690379.md#1" target="_blank">香港人权法发酵 日本或取消习近平国事访问</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690379.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/1502081731211528-150x120.jpg" align ="left"></a>本周三美国总统川普（特朗普）签署了《香港人权与民主法案》后，在西方社会引起多米诺骨牌效应。这可能迫使日本考虑是否取消习近平明年春季到日本的国事访问。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690279.md#1" target="_blank">谍案发酵 中国创新“台湾女婿”高管闪辞</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/78155849_2798707956845991_5087302248585756672_o-150x120.jpg" align ="left"></a>中国创新投资公司主席向心及妻子龚青，被前特工王立强指控是中共在港台的特务头子，遭台北地检署列为被告，双双限制出境。27日，中国创新宣布2名独立非执行董事陈永光及李永恒从当日起辞任。其中陈永光是台湾人，也是台籍前主播陈若华的丈夫，此时突然请辞引发关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690361.md#1" target="_blank">吉林前书记高狄病亡 曾因卷入邓江斗而丢官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1308262045372039-150x120.jpg" align ="left"></a>中共吉林省委前书记、人民日报社社长高狄，10月26日病亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690324.md#1" target="_blank">香港法案生效 章家敦：中共若报复或自取灭亡</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280849492188-150x120.jpg" align ="left"></a>周三，美国总统川普（特朗普）签署支持香港抗议者的《香港人权与民主法案》，中共恼羞成怒说要报复，美国中国问题专家回应说，中共反应荒谬可笑，且中共若报复，可能会自取灭亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690302.md#1" target="_blank">地缘政治竞争加剧 中共军队用科研介入北极</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11690302.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/909050416421758-150x120.jpg" align ="left"></a>丹麦情报机构周五（11月29日）警告说，中共军队越来越多地利用在北极的科学研究作为涉足该地区的途径。报告警告说，在地球冰冻的北极地区，地缘政治竞争正在加剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:35 AM							</td></tr>
@@ -18,18 +31,5 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688268.md#1" target="_blank">字节跳动、华为与中共有何密切关系</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/AFP-150x120.jpg" align ="left"></a>澳洲智库“澳大利亚战略政策研究所”周四（11月28日）发布的一份新报告发现，抖音海外版TikTok的母公司字节跳动和华为等中国科技巨头正在与共产党紧密合作，对中国西部的新疆维吾尔族进行审查和监视。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 10:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687729.md#1" target="_blank">高以翔录制陆综殒命 出事前黄秋生曾怒批节目</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔，11月27日在大陆录制浙江卫视真人秀《追我吧》时因体力不支晕倒，经送医抢救后仍回天无术，噩耗震撼演艺圈。因节目组未能替艺人的安全把关，引发大批网民质疑和炮轰。不过，台湾律师林智群28日在facebook（fb）发文反思时直言不讳地说，“其实身为观众的你我也是共犯之一。”并赞赏地说，出事之前仅有香港艺人黄秋生谴责这类节目是“收买人命”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 8:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688217.md#1" target="_blank">“蝙蝠侠”漫画疑撑港 “小粉红”抵制遭嘲讽</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688217.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1206260956092275-150x120.jpg" align ="left"></a>DC漫画日前在社交平台公布《蝙蝠侠：黑暗骑士归来》续集《黑暗骑士归来：黄金之子》的全新封面。其中一张图是蝙蝠女手执汽油弹，准备向外抛掷的画面，并配文：“The future is young（未来是年轻人的）。”虽然未提“香港”二字，但引发一众“小粉红”抵制，引发网民嘲讽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 8:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688012.md#1" target="_blank">高以翔录陆综骤逝 传《追我吧》辞退所有人员</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/f5b5ace38c44f7f79c32f64100545c96-150x120.jpg" align ="left"></a>11月27日凌晨，台湾艺人高以翔在录制浙江卫视《追我吧》节目的奔跑环节时倒地，最终抢救无效，遗憾离世。其命运就如其主演的电视剧《遇见王沥川》的角色——“王沥川”的生命在最好的年华戛然而止，高以翔年仅35岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 8:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688169.md#1" target="_blank">环时公布王立强诈骗庭审录像 真实性广遭质疑</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688169.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/19-11-29.55-150x120.jpg" align ="left"></a>中共特工“王立强”近日向澳大利亚投诚，在中港台和澳大利亚引起轩然大波。王立强指证的向心、龚青夫妇已在台湾被扣查。中共则称王立强是被判刑的诈骗犯，官媒环球网更公布了一段庭审录像。不过分析认为，这段模糊的经过剪辑的录像，疑点甚多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 7:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688070.md#1" target="_blank">北京抱怨川普签香港法案 却为贸易协议敞大门</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1B99V7-600x400-150x120.jpg" align ="left"></a>《华尔街日报》周四（11月28日）刊文说，北京一方面抱怨美国总统川普（特朗普）签署《香港人权与民主法案》，但另一方面却为跟美国达成贸易协议敞开大门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 7:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687641.md#1" target="_blank">【新闻看点】川普签香港人权法 中共2大痛点</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687641.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280849422188-600x400-1-150x120.jpg" align ="left"></a>川普签署法案，意味着《香港人权与民主法案》正式生效成为法律。这使得北京和香港像被针扎了一样，作出了强烈的反应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 6:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687490.md#1" target="_blank">薄熙来二姐病亡 薄家父子丑闻再受关注</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687490.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/09201ebd6fb8497900773bdc6cb1ff6c-150x120.jpg" align ="left"></a>中共元老薄一波的二女儿薄洁莹病亡后，薄家父子的淫乱、残暴等丑闻再次成为外界关注的焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 6:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687982.md#1" target="_blank">“坏消息”接踵而至 中共当局焦头烂额</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>2019年，中共正面临着前所未有的乱局。对中共当局而言，可谓坏消息不断，让其焦头烂额。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688102.md#1" target="_blank">美国立法保护香港 中美决战在港拉开序幕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11688102.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-28_21-27-10-150x120.jpg" align ="left"></a>11月27日美国颁布了《香港人权与民主法案》，意义十分重大。加上大陆特工王立强惊人爆料，证实中共利用超限战手法渗透控制香港和台湾。美国的立法，为中美在香港的较量拉开序幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687880.md#1" target="_blank">川普签香港人权法案 舒默促总统认真执行</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687880.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/2fd92e52ac2626fd7f1ca0370823598b-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周三（11月27日）签署了《香港人权与民主法案》和《禁止向香港出口防暴装备法案》，众多美议员发表推文表示感谢。参议院少数党领袖舒默督促川普积极执行法案，并表示美国承受不起对中共软弱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687919.md#1" target="_blank">一文看懂 香港人权与民主法案是哪国内政</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687919.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1MN1JJ-150x120.jpg" align ="left"></a>感恩节前一天，美国总统川普（特朗普）签署《香港人权与民主法案》，以表达对香港抗议者的支持。这项法律正式生效使得中共在跳脚的同时，也深感恐惧。中共再次重复美国通过该项法案是干涉中国内政，那么从该法案的历史溯源到今年的立法过程看，《香港人权与民主法案》到底是哪国的内政呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 4:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687869.md#1" target="_blank">【热点互动】川普签香港法案 贸易协议还签？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db602cd78fca64_ttl7daykzf_86c475e41a499-150x120.jpg" align ="left"></a> 川普总统签署，《香港人权法案》成为法律！贸易协议还签吗？抖音微信涉内容审查，或成美下一个监管目标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 3:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687692.md#1" target="_blank">英国侦探声援郑文杰 深度剖析案件矛盾处</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/Simon_Cheung1@1200x1200-150x120.jpeg" align ="left"></a>英国驻香港总领馆前雇员郑文杰（Simon Cheng）向英国通讯管理局（Ofcom）控告，因为中共央视海外电视CGTN了播放他被迫认罪的录像。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687493.md#1" target="_blank">香港区选跨出民主第一步 红二代：中共怕选票</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687493.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911270654462188-150x120.jpg" align ="left"></a>香港区选落幕后，各方观察北京当局将有何动态。一位不具名的红二代向大纪元表示，对中共来说，这次选举结果肯定是有冲击，因为它最怕选的是选票，而且从它应对香港问题和美中关系两大问题来看，中共没有任何自信也没把握。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687348.md#1" target="_blank">川普签香港人权法案 港人振奋北京恼怒</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687348.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20180323-Trump-SamiraBouaou-8329-2-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周三（11月27日）签署了《香港人权与民主法案》和《禁止向香港出口防暴装备法案》，这一消息令香港寻求民主的抗议者们为之振奋，却令北京火冒三丈，谴责美国的举动是“赤裸裸的霸权行为”，并紧急召见美驻华大使表示抗议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 10:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/ncid277_5.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/ncid277_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/ncid277_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_5.htm">http://www.epochtimes.com/gb/ncid277_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
