--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678115.md#1" target="_blank">【拍案惊奇】民主派大胜 全面解读香港区选</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678115.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191125366-150x120.jpg" align ="left"></a>11月24日，香港区议会选举，全世界都在关注。民主派抗争人士在选举前，就喊出“踢走建制派”，“血债票还”等口号，现在已经可以说基本达到目的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 1:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677463.md#1" target="_blank">9年冤狱折磨 法轮功学员徐天福被迫害离世</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2015-11-24-minghui-jilin-female_torture-17-1-508x359-1-150x120.jpg" align ="left"></a>四川米易县撒莲乡法轮功学员徐天福，因修炼法轮功曾被非法判刑9年，自2012年10月从德阳监狱回家后，因在监狱被迫害，身体受损严重，一直没有恢复，于2018年黄历冬月三十离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677987.md#1" target="_blank">泛民大胜 港区“全民公投”清除中共代理人</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677987.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/new_photo6258123455056685372-150x120.jpg" align ="left"></a>香港区议会选举11月24日结束，共计294万人投票，总投票率突破七成，达71.2%。累积投票人数及投票率均打破历届区议会选举纪录，投票率亦打破历届立法会选举纪录。这次选举是持续5个多月反暴政、争自由运动以来首次民意直接表达。香港市民心目中的投票意义重大，这次区议会选举成为清除中共代理人的全民公投。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/27/n11683545.md#1" target="_blank">香港二千校友联署促解封理大</a><br></h3>理工大学管理层昨日到校园，劝谕留守者离开。林郑月娥表示如果理大校方可劝谕留守者离开，警方的安全小组便不会进入校园，理大学生会署理会长胡国泓批评林郑将责任推给学校。另外，超过2千名理大校友联署，要求校方及警方尽快解封和重整校园。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 9:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11680303.md#1" target="_blank">纳瓦罗：白宫在审议香港人权法案 再送川普</a><br></h3>上周，《香港人权与民主法案》顺利通过美国国会两院。美国贸易顾问彼得·纳瓦罗（Peter Navarro）表示，目前，白宫律师正在审查国会上周批准的香港法案，之后将提交总统川普（特朗普）进行签署。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 5:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11677619.md#1" target="_blank">旅英港人多城游行 吁英政府支持港民抗争</a><br></h3>中央社11月23日报导，英国民间团体“争取自由.与香港站在一起”（Fight for Freedom. Stand with Hong Kong）和“民主香港”（Democracy for Hong Kong - D4HK）发起了在伦敦的游行，而其它团体则领导了伯明翰、曼彻斯特、纽卡斯尔（纽卡索）、爱丁堡和布里斯托尔的游行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/ncid278_4.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/ncid278_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/ncid278_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_4.htm">http://www.epochtimes.com/gb/ncid278_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
