--- a/gb/news2008_5.md
+++ b/gb/news2008_5.md
@@ -1,4 +1,23 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/23/n11675271.md#1" target="_blank">天然打扫法！除了小苏打 还有4种神奇打扫用品</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/23/n11675271.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/clean-room_465031619-150x120.jpg" align ="left"></a>用天然的方法打扫房间，不仅对家人和自己的身体好，也十分轻松方便。看着闪亮亮的房间，自己也变得精神百倍。日本食育师妈妈蔡庆玉分享天然打扫秘诀。“马上丢”、“马上洗”心法：天然打扫用品
+
+这几年来，日本很流行天然打扫法，尽量不要用很强的化学清洁剂，对自己和家人身体不好，对环境造成伤害。● 神奇的小苏打粉......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 9:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11670037.md#1" target="_blank">The Kunjip真正道地的韩国味道</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11670037.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/BGZ01091-150x120.jpg" align ="left"></a>The Kunjip是纽约经典韩餐厅，味道正宗好吃，服务周到，价格实惠，门前经常大排长龙。
+
+老板朴海花女士，来美国30年，是韩国街“繁荣会”的会长，也是纽约“韩食世界化”的理事。Kunjip的中文是“大伯”的意思，在韩国传统文化中，去伯父家吃饭，总是能吃到最丰盛、最可口的美味。朴老板说，她愿意将韩餐介绍给世界各族.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 9:05 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11674330.md#1" target="_blank">韩国参鸡汤  真材实料美味速递</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11674330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d994363c7b2e99_ttl7dayskO_3-150x120.jpg" align ="left"></a>感恩节快到了，西方的习俗是感恩节吃火鸡。可当你面对着好大一只火鸡，还要进行加工烹调，确实是件费心费力的事。今年的感恩节，你想过试试别的桌上选择吗？
+
+韩国参鸡汤虽然听起来是汤，里面确是有一整只鸡和人参、糯米等食材，经过炖煮后，鸡肉软嫩鲜甜不油腻，有“韩国第一名汤”的美誉。如果单单说是喝汤，似乎淡化了参鸡汤里可以吃的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 4:04 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/6/n11638340.md#1" target="_blank">感恩节送正宗韩国梨</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/6/n11638340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_1176482194-1-150x120.jpg" align ="left"></a>超市里，新鲜上架的水果讨人喜爱，而真正正宗的韩国梨可以说以其又圆又大的个头、甜蜜多汁的口感和细嫩雪白的果肉占有显要地位。我们今天谈到的韩国梨，不只是概念上属于韩国品种的梨，而且是真正地道在韩国生长成熟、具有韩国的地域风味梨。
+
+出口到美国的韩国梨大都以塑料盒或纸盒包装，出售时往往以盒为单位，一盒的个数虽不多，但个个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 4:01 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank">鼠疫慌 京蒙之间设三道防线 河北现“通知”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/EJ7uJQMUYAAz_e2-150x120.jpeg" align ="left"></a>内蒙、甘肃等地早些时间已爆发鼠疫，但当局掩盖真相，人心惶恐。目前内蒙已接近草木皆兵，车站、火车站、机场、医院都要检查体温。有网上消息称，目前很多村庄已经被完全封锁，村民不许进出，村庄通讯也遭切断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11661713.md#1" target="_blank">胃痛原因多 自我指压可缓解</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11661713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506080730501778-150x120.jpg" align ="left"></a>在中医观点，多由外感寒邪，饮食所伤，情志不畅和脾胃虚弱等病因而引发。胃是主要病变脏腑，常与肝脾等脏有密切关系。胃气郁滞，失于和降是胃痛的主要病机。治疗以理气和胃为主，若由于忧思恼怒，肝气失调，横逆犯胃所引起，则治法应以疏肝理气为主。 若由脾不健运，胃失和降而导致，则用温通补中法，以恢复脾胃的功能。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 2:57 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11673231.md#1" target="_blank">以中国古老秘术“灸”祛病养生</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11673231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/Moxibustion2--150x120.jpg" align ="left"></a>?针、灸、药是中国传统医学的宝藏，古人云：“针之不到，药之不及，必灸之。”灸，即是点燃艾条之后去薰烤人体体表穴位。很多时候，灸比针更适合用于治疗疾患，扶正延寿。
+
+艾灸，这一中国最古老的养生祛病秘术，如今在卡城LG诊所得到大力研究和应用。老板郭南希介绍，艾灸特别适合加拿大，适合卡尔加里，因为这里冬季寒冷，长达半年有.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 12:40 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/21/n11671676.md#1" target="_blank">含植物油食品恐致癌 台拟制造标准 亚洲首例</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/21/n11671676.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/palm-oil_127469948-150x120.jpg" align ="left"></a>近年来各国陆续发现经高温处理的植物油加工食品中，可能含有具致癌性物质“缩水甘油脂肪酸酯”，目前仅有欧盟订定相关限量标准，卫福部食药署基于保障国人食品安全，目前正研拟比照欧盟规范，将是亚洲首见，新制最快明年上半年实施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:01 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/16/n11660453.md#1" target="_blank">Gopchang Story Flushing精致烤牛肠</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/16/n11660453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/image0-150x120.jpeg" align ="left"></a>动物内脏含有丰富的铁，人们食用益于补铁，但如何能把内脏做成美味的料理，可是需要厨师下一定功夫的。亚洲人比美国人有更多食用动物内脏的经验和习惯，韩国人就喜欢把牛或猪的内脏烤熟，然后蘸上调味汁来食用。有一家纽约曼哈顿的韩国餐馆把烤肠做得很成功，让美国的食客吃得意犹未尽。老板今年在法拉盛新开了一家取名Gopchang Sto.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 10:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/16/n11660218.md#1" target="_blank">新泽西Tang2 全新开张</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/16/n11660218.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1Q8A8616-150x120.jpg" align ="left"></a>新泽西的Tang Two Restaurant开张了！装饰现代、干净而宽敞，与法拉盛的Tang Restaurant一样，既美味又丰富，套餐不减量，而且服务也一样贴心周到。生日聚餐、大型宴会都适合。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 10:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/21/n11672494.md#1" target="_blank">豆腐能减肥 对女性有益 营养师教减肥最佳吃法</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/21/n11672494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/tofu-lose-weight_1551461723-150x120.jpg" align ="left"></a>豆腐是理想的减肥食材，但营养师提醒，豆腐减肥有讲究，如果单吃豆腐，小心复胖或变成“泡芙人”。豆腐是很好的营养来源之一，不仅含优良植物性蛋白质，适合素食者食用，还含有钾、镁及大豆异黄酮等营养，对女性有益。用豆腐减肥的正确方法，是用对的食物搭配，并注意营养均衡，减肥效果更持久。除了嫩豆腐，也可自制美味的鸡蛋豆腐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 2:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11673087.md#1" target="_blank">台湾花式扑克牌高手露一手</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/22/n11673087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-95913990-1-150x120.jpg" align ="left"></a>除了玩游戏之外，扑克牌也能用来变魔术和进行花式表演。最近网上就有一段短片呈现台湾花式扑克牌高手的好身手，令人印象深刻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 2:08 PM			</td></tr>
@@ -25,28 +44,5 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/18/n11662254.md#1" target="_blank">墨尔本网络公司员工备受呵护</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/18/n11662254.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/0E2A9418-150x120.jpg" align ="left"></a>墨尔本Narre Warren区一家网络服务公司受Google公司的启发，为员工提供各种各样的福利，对员工关怀备至。因此员工们工作积极，都不舍得离开这家公司。据《太阳先驱报》报导，VentraIP公司是一家专门从事网络托管和域名注册的公司，成立于2009年，最初只是一个以家庭办公为主的公司。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 4:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11660827.md#1" target="_blank">川贝雪梨百杏汤的功效</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/17/n11660827.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/cbxl19111611-1-150x120.jpg" align ="left"></a>药食同疗 ：健胃消食化积汤 。川贝雪梨百杏汤，清热润肺 化痰止咳。贝母开郁下气，是化痰之药，主润肺消痰。贝母味苦甘，苦能清肺泄热化痰，甘能润肺止咳，尤其对久咳、燥痰、热痰更是有效。南杏能润肺、止咳、通便，很适合身体较虚弱者、老人家食用。南杏、北杏同用，无非借助北杏治咳，南杏润肺，双仁合用，增加协调功用。  这道煲汤能协.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 4:40 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/18/n11664433.md#1" target="_blank">保健品买液体比锭剂好？常见剂型优缺点大公开</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/18/n11664433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/nutrition-supplement-1120-150x120.jpg" align ="left"></a>走到柜前，却发现光补钙产品就分一般钙锭、液态钙软胶囊、钙粉甚至钙水。挑选各式保健食品时，应该有不少民众会听到“这个剂型好吸收”，或“比较有效”等说法。不同剂型的保健食品，保健效果有差吗？笔者与大家分享保健食品的剂型差别，包括锭剂、胶囊、粉剂、水剂。一、液态保健食品好吸收，锭剂难消化？三、各种剂型，各有优缺点......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 3:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11667475.md#1" target="_blank">豆浆2种喝法 改善更年期症状</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11667475.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/soymilk-Menopause-1120-150x120.jpg" align ="left"></a>到了更年期，女性卵巢功能衰退，容易出现烦躁、热潮红、眩晕等症状。豆浆富含大豆异黄酮，搭配特定的养生食物，对女性更年期保养有益。营养药膳专家、中医师王作生推荐2种豆浆作法，帮你改善更年期症状。更年期保养豆浆1：糯米桂圆豆浆（黄豆+桂圆+糯米）功效：改善烦燥、潮热等更年期症状。原料：黄豆60克，桂圆肉、糯米各20克......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 12:31 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11669425.md#1" target="_blank">卖方市场快来了 买房犹豫时间所剩不多</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11669425.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_546856336-150x120.jpg" align ="left"></a>最近加国房价飞涨，房市又快迈入卖方市场了，其中，有些城市已经是卖方市场了，还有更多则是处于平衡市场状态。全国各地中，只有一个城市仍是买方市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 12:31 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11668976.md#1" target="_blank">炸鱼薯条是葡萄牙犹太菜  藏着一段辛酸史</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11668976.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-109346937-150x120.jpg" align ="left"></a>炸鱼薯条普遍被认为是一道源自英国的街头小吃，其实这道菜肴并非源自英国，而是一道16世纪的葡萄牙犹太菜肴。透过这道料理，可以感受到犹太人艰辛的过往。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11668104.md#1" target="_blank">这只土耳其小猫爱看恐怖片 反应超夸张</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11668104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-109098852-150x120.jpg" align ="left"></a>土耳其一名Instagram用户创设了“快乐猫家庭”（Happy Cat Family）的账号，分享其饲养的6只小猫的日常生活照片和短片。而其中一只名叫波克比（Togepi）的小猫爱看恐怖片，它看到恐怖剧情而产生的反应十分夸张。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11668212.md#1" target="_blank">立志专业 圣地亚哥华裔金牌经纪的成功路</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11668212.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/DSC_0427-Victor-Kung1-150x120.jpg" align ="left"></a>常听到这样一句话：“人算不如天算”。人生没有按照所计划的轨道走，很常见，不特别。就如圣地亚哥地产经纪宫筑筠，原本计划攻读航天博士，不曾想走进了地产经纪这一行。然而，靠着诚，勤，坚持和专业精神，在这个低门槛、高淘汰的行业立足，成为金牌经纪，他却带给人们特别的宝贵经验。
-
-“偶然”走入地产行业
-
-地产经纪并不在宫筑.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:44 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11667734.md#1" target="_blank">镭射笔成“开门钥匙”？居家声控的安全隐忧</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/20/n11667734.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191120_shouhuihsu_laser_GettyImages-903445008_01-150x120.jpg" align ="left"></a>这些像“看家狗”一样的人工智能设备并不安全，用一种简单常见的办法就可成功“入侵”，甚至可能导致家庭财物被盗！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:45 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11667199.md#1" target="_blank">女性懒人养生法 热敷30分钟 保养子宫排经血</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11667199.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/hot-pack-woman3_174156308-150x120.jpg" align ="left"></a>看诊这些年来，笔者常常鼓励大家要热敷身体，尤其是女性朋友，更要常常热敷小腹。女性需要保养子宫：女性的骨盆腔内比男性多了一个器官，那就是子宫。女性时常热敷小腹，更可以加强子宫收缩，促进经血排放的顺利，医师在处理妇科问题时，就能更加得心应手！提供热敷方法：1. 女性每天至少30分钟热敷小腹，月经来时可以加强热敷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:26 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11666899.md#1" target="_blank">十月东湾房市价格略反弹 Berkeley达新高</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11666899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1024px-UCBerkeleyCampus-150x120.jpg" align ="left"></a>文：李欧?大纪元
-旧金山东湾房市在经历前两个月的下滑后，十月份终于得到旺季的弹药补给，使得销量与价格有弹升的气力。本次我们也额外加入康斗、联排房的销售数据，让读者能更详尽地看到每个房市的变化。
-
-详细数据请见以下文章：
-2019东湾房市10月份最新数据（上）
-东湾地产：Berkeley一支独秀
-首先还是看独.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:57 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11666790.md#1" target="_blank">2019东湾房市10月份最新数据（上）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/19/n11666790.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/201910esatbay-5-150x120.jpg" align ="left"></a>10/2019东湾房市，统计销售中位数价格、库存、待售出、售出数量等多个房市数据。
-东湾房市：奥克兰（Oakland）独立房市场销售状况摘要
-· 10月份期间新上市的独立房屋共有336栋。（9月：360）
-· 10月份期间售出的独立住宅共有243栋。（9月：169）
-· 10月份的中间售价高达83万8,000美.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 2:32 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/news2008_5.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/news2008_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_5.htm">http://www.epochtimes.com/gb/news2008_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
