--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -26,14 +26,7 @@
 
 40多个团体组成的“全港反送中联席”根据香港警方公布的数字统计，6月12日至11月13日，港警发射至少9362个催泪弹。11月18日，港警发射1458个催泪弹。11月19日，发射1567个催泪弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678617.md#1" target="_blank">海风：全球剿共 哪些华人或入“高危名单”？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Final_C1_Local-News_April_20190918-600x400-150x120.jpg" align ="left"></a>中共利用特工和侨团在海外大搞红色渗透，并借助“千人计划”、“孔子学院”、“一带一路”等名目在全球挖人才、盗窃知识产权、收卖各国官员、组织培养海外“红卫兵”、收卖媒体等行为，早已触动了各国政府的敏感神经。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:45 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/27/n11684231.md#1" target="_blank">金浴凤：月儿弯弯照九州</a><br></h3>沉沉神州暗夜长，一轮明月似香港；
-清光照得专制慌，乱射烟幕去遮挡；
-转见新月又挂苍，赵家无措心抓狂；
-更烦无数黑天鹅，越黑越飞没法防。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:38 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/27/n11684206.md#1" target="_blank">吐为快：选票见证民主香</a><br></h3>鱼目混珠徒为妄，大劫洗浴珠更亮;
-干儿丑戏跌下场，傀儡禁蒙违宪章;
-鲜血浇灌花更芳，荣光必定归香港;
-土共且收臭皮囊，耻叫世人戳脊梁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:21 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11676839.md#1" target="_blank">何坚：“五毛党”攻击神韵的三种伎俩</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/24/n11676839.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/CCP-internet-commenters@1200x1200-150x120.jpg" align ="left"></a>一年一度的神韵艺术团世界巡回演出即将开启。象征中华传统文化、代表世界顶级艺术水平的神韵演出，十余年来在舞台上塑造的诸多人物形象，已在世界各国观众心中扎下了根。其中之一的“美猴王”，火眼金睛能识破妖邪，脍炙人口。殊不知，神韵晚会也能赋予每位观众一双“火眼金睛”，助人明是非、识正邪，包括识破中共“五毛党”散布的千百种谎言.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/27/n11683930.md#1" target="_blank">林泉：港民区选告捷莫轻敌</a><br></h3>港民区选倒乾坤，铁掌横击党一尊。
 战友相拥抛喜泪，亲朋共庆启香槟。
 争求民主尸盈海，博取自由血满身。
@@ -43,5 +36,11 @@
 两座楼间无足距，
 不得阳光沐浴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11679554.md#1" target="_blank">杜彼得：出其不意 破之必也 华人在美 庄敬自强</a><br></h3>很多人以为美中的贸易冲突，使华人尴尬，刚开始时也许有一点，但是一年多以来，大家已坦然。真正使华人处境微妙的是，美国两大党之争，由上而下，到了地方，“激进左派”的主张，使理性的华人不知何去何从？尤其是若身处比较敏感的州，左也不是、右也不对，面对地方小范围的选举，你又不得不与自由派接触、合作，因为在民主制度的国家，任何选举.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:45 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/25/n11678848.md#1" target="_blank">慧声：诗三首</a><br></h3>大纪元好
+
+大笔如椽九评出世地动天惊
+纪事载文讲清真相民众唤醒
+元始声明三退潮起澎湃汹涌
+好人平安善恶必报天灭中共......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
