--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698433.md#1" target="_blank">中共惧抗争蔓延全国 茂名“时代革命”成功</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-2-e1575404135259-1-150x120.jpg" align ="left"></a>就在香港人通过半年抗争取得区议会选举胜利之后，反共火种传到了大陆。11月28日，广东茂名化州市文楼镇村民学港人提出“五大诉求”，高喊“光复茂名 时代革命”，勇敢站出来反对政府的错误决定、并用武力反抗警察的暴力镇压。不过结局不同的是，12月1日，文楼党委书记和市公安局长公开让步道歉，而香港林郑政府依旧与民为敌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 5:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697477.md#1" target="_blank">法轮功学员何立芳被虐杀 疑被活摘器官</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697477.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capture-1-150x120.jpg" align ="left"></a>青岛市即墨区45岁的法轮功男学员何立芳（何立方），于2019年7月2日被青岛市“610”、即墨“610”、即墨区法院、检察院、即墨区分局北安派出所、北安街道长直院社区、北安街道办事处、普东看守所、青岛市城阳区第三人民医院联手残酷虐杀致死，疑被活摘器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 4:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698187.md#1" target="_blank">【新闻看点】孟晚舟豪宅作画 华为251案遭轰</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1170783534-150x120.jpg" align ="left"></a>在家里坐牢的华为首席财务官孟晚舟，届满一年之际发了一封公开信，与此同时，华为离职员工李洪元被诬告逮捕，遭到羁押251天后无罪释放。李洪元要求华为道歉，却被华为拒绝。引发舆论哗然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 4:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698314.md#1" target="_blank">【热点互动】手机人脸识别登场 全国新疆化？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698314.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dcef68a196f6d1_ttl7dayfor_2abe024360423b70-150x120.jpg" align ="left"></a>从12月1日起，在中国新手机注册需面部识别，将手机用户的面部状态存入数据库。外界认为中共此举是为了进一步监控民众。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 4:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698116.md#1" target="_blank">川普：股市下滑 不会迫使我和中方达坏协议</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186269317-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（12月3日）出席北约峰会，在被问道是否计划在年底之前完成与中方的贸易协议，他回答：“我没有最后期限。”
+
+他还补充说：“从某些方面来说，等到大选后再进行会更好。”美国将在2020年11月举行总统大选，川普正争取连任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 3:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698210.md#1" target="_blank">中国上市银行七成“破净” 高管变动频繁</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/06/Industrial-and-Commercial-Bank-of-China-GettyImages-72258097-150x120.jpg" align ="left"></a>中国银行业呈现业绩下滑、资金紧张、高管频繁更换的局面。今年以来，中国上市银行的股价持续下跌，70%银行股“破净”，投资人对银行资产的信心大减，而银行不断扩大发债规模更引发风险担忧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696111.md#1" target="_blank">高狄病亡 中共“吉林帮”日渐衰落</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696111.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>中共吉林省委前书记高狄近期病亡。高曾因在“六四”后帮助江泽民对抗邓小平而获江信任，并乘机向江推荐了多名“吉林帮”成员。但习近平上台后，“吉林帮”一批成员被查，日渐衰落。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698068.md#1" target="_blank">李洪元被拘 华为拒道歉 更多员工冤情曝光</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1905241928522384-150x120.jpg" align ="left"></a>在华为员工因离职讨薪被拘押251天引爆舆论之后，华为周一（2日）发声明辩护并拒绝道歉，事件引发更多已离职员工挺身指控华为践踏人权、并导致众多无辜者入狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687375.md#1" target="_blank">民企生存环境恶劣 浙商四次被掠夺财产（二）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/S__13778976-1-150x120.jpg" align ="left"></a>浙江商人姜向前经营的南京瑞雪淀粉糖设备制造公司，历经客户拖欠货款，并且勾结公、检、法，谋划编制各种罪名实施诬告陷害，进而4次被掠夺财产。短短几年便被逼得破产倒闭。他感叹大陆民企生存环境恶劣，基层司法系统中周永康型“流毒”依然肆虐！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:22 AM							</td></tr>
@@ -27,13 +35,7 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697331.md#1" target="_blank">贪4.49亿 内蒙古前政法委书记被判死缓</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697331.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/xingyun-Web-Banner-1200x800-v1-600x400-1-1-150x120.jpg" align ="left"></a>12月3日，中共内蒙古自治区人大常委会前副主任邢云，因受贿罪判处死刑，缓期二年执行，没收个人全部财产；缓期执行二年期满后减为无期徒刑，终身监禁，不得减刑、假释。邢云当庭表示服从判决，不上诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 6:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697024.md#1" target="_blank">大陆11月房价下跌城市再增八个</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697024.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/07/1407190937201944-150x120.jpg" align ="left"></a>12月1日发布的2019年11月大陆百城价格指数显示，大陆房价环比下跌的城市依然在增加，11月份增加了8个。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697277.md#1" target="_blank">中共报复香港法案 专家：刺激美舰停靠台湾</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697277.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280849422188-150x120.jpg" align ="left"></a>中共对美国签署《香港人权与民主法案》进行报复，包括暂缓审批美国舰船和军机停靠香港的申请，和制裁某些非政府组织，对此美国军事专家表示，这刺激了美国舰机停靠台湾的意愿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank">程晓容：中共走进死胡同 新疆香港折射全局</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697043.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912020146081501-150x120.jpg" align ="left"></a>为什么说中共把自己逼入了死胡同？新疆和香港的事态足以说明全局。中共在这两个地区采用了同样性质的统治手段：暴力压制和谎言欺骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697092.md#1" target="_blank">茅台今年已有8名前高管被调查或逮捕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1302191038192262-150x120.jpg" align ="left"></a>12月2日，贵州茅台前副总经理、茅台酒销售公司董事长王崇琳被起诉。而从今年5月起，茅台共有8名官员或落马、或逮捕、或起诉等。陆媒曾报导称，贵州多名官员因收受茅台、转卖茅台酒批条获利被查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 4:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697165.md#1" target="_blank">陆媒假新闻：俄图-160轰炸机狠甩美F-35战机</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697165.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1052110464-150x120.jpg" align ="left"></a>大陆新浪网在11月曾刊登一则美制F-35战机拦截俄制图-160轰炸机但被远远地甩开的新闻，此消息经大陆各网站转载，随后也传到外国网站。但经查核网站证实，这个由新浪网率先发布的消息，是精心捏造的假新闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 4:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696703.md#1" target="_blank">15年来首次 港府预计年底财政现赤字</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696703.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191111103844100615-600x400-1-150x120.jpg" align ="left"></a>12月2日，香港财政司司长陈茂波表示，香港经济情况急剧恶化，预计截至2020年3月底的财政年度内，香港政府将出现财政赤字，这是15年以来首次。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695972.md#1" target="_blank">送辩护词遭枉判3年 辽宁孔繁校冤狱期满回家</a><br></h3>辽宁省抚顺市法轮功学员孔繁校，仅仅因给立案单位送辩护词就被非法判刑3年，羁押到辽宁省本溪监狱服刑，11月17日，3年冤狱期满才回到家中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697447.md#1" target="_blank">广西乡医称喝长生液活120岁 网民嘲讽</a><br></h3>近日大陆网传一张照片，一群穿着白大褂的医生围着一锅液体，横幅上写着“高手在民间 神方在乡里 广西宾阳乡医熬制长生液现场会 人类活到120岁不是神话”。此事引发网民热议，有网民讽刺：“特供，必须特供！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:27 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697266.md#1" target="_blank">福建少女遭霸凌 被同学脱衣服搧耳光</a><br></h3>11月24日，福建中华技师学院，15岁女生小小（化名）被同学和其他几名女生在寝室扒光上衣、疯狂扇耳光、揪头发、辱骂，并被拍下视频。警方称，因涉事女生都是未成年人，无法拘留，校方则仍未做出回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697025.md#1" target="_blank">北京顺义一豆馅厂房爆炸 4死10伤</a><br></h3>12月3日另成3时7分左右，北京顺义区牛栏山镇京日东大食品有限公司一加工豆馅厂房发生爆炸。截止目前，4人死亡10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
